--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "npm run compile && node ./node_modules/vscode/bin/test",
-    "lint": "tslint 'src/app/**/*.ts' --format stylish --fix"
+    "lint": "tslint 'src/app/**/*.ts' --format stylish --fix",
+    "prettier": "prettier --print-width 140 --single-quote --write src/**/*.ts"
   },
   "contributes": {
     "configuration": {
@@ -287,6 +288,7 @@
   },
   "dependencies": {
     "copy-paste": "^1.3.0",
-    "jira-connector": "^2.8.0"
+    "jira-connector": "^2.8.0",
+    "prettier": "^1.15.3"
   }
 }
