--- a/package.json
+++ b/package.json
@@ -40,8 +40,14 @@
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "npm run compile && node ./node_modules/vscode/bin/test",
-    "lint": "tslint 'src/app/**/*.ts' --format stylish --fix",
-    "prettier": "prettier --print-width 140 --single-quote --write src/**/*.ts"
+    "prelint": "prettier --print-width 140 --single-quote --write src/**/*.ts",
+    "lint": "tslint 'src/**/*.ts' --format stylish --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test",
+      "pre-push": "npm run lint && npm run test"
+    }
   },
   "contributes": {
     "configuration": {
@@ -288,6 +294,7 @@
   },
   "dependencies": {
     "copy-paste": "^1.3.0",
+    "husky": "^1.3.1",
     "jira-connector": "^2.8.0",
     "prettier": "^1.15.3"
   }
