--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test",
-      "pre-push": "npm run lint && npm run test"
+      "pre-commit": "git stash -q --keep-index && npm run lint && npm run test && git add -u && git stash pop -q"
     }
   },
   "contributes": {
