feat: added numberOfIssuesInList setting
now you can decide how many issues are shown in list

--- a/package.json
+++ b/package.json
@@ -107,6 +107,11 @@
           "type": "boolean",
           "description": "Automatically watch for branch switching and select appropriate project and working issue",
           "default": false
+        },
+        "jira-plugin.numberOfIssuesInList": {
+          "type": "integer",
+          "description": "Number of issues to show in list. n.b: If you define high numbers the research can be slow.",
+          "default": 50
         }
       }
     },
