--- a/package.json
+++ b/package.json
@@ -314,6 +314,7 @@
   },
   "dependencies": {
     "copy-paste": "^1.3.0",
-    "jira-connector": "^2.8.0"
+    "jira-connector": "^2.8.0",
+    "xml2js": "^0.4.19"
   }
 }
