feat: added notifications explorer + refactor

--- a/package.json
+++ b/package.json
@@ -132,8 +132,12 @@
     "views": {
       "jiraExplorer": [
         {
-          "id": "jiraExplorer",
+          "id": "issues",
           "name": "EXPLORER"
+        },
+        {
+          "id": "notifications",
+          "name": "NOTIFICATIONS"
         }
       ]
     },
