fix: manage Tracking Time Mode: never

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
           "enum": [
             "hybrid",
             "always",
-            "vsCodeFocus"
+            "vsCodeFocus",
+            "never"
           ],
           "default": "hybrid"
         },
