--- a/package.json
+++ b/package.json
@@ -134,10 +134,6 @@
         {
           "id": "issues",
           "name": "EXPLORER"
-        },
-        {
-          "id": "notifications",
-          "name": "NOTIFICATIONS"
         }
       ]
     },
@@ -318,7 +314,6 @@
   },
   "dependencies": {
     "copy-paste": "^1.3.0",
-    "jira-connector": "^2.8.0",
-    "xml2js": "^0.4.19"
+    "jira-connector": "^2.8.0"
   }
 }
