--- a/package.json
+++ b/package.json
@@ -35,11 +35,17 @@
   "main": "./out/src/extension",
   "scripts": {
     "clean": "rm -rf ./out",
-    "vscode:prepublish": "npm run clean && npm run compile",
-    "compile": "tsc -p ./",
+    "vscode:prepublish": "npm run compile",
+    "compile": "npm run clean && tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "rename:forward": "node ./scripts/rename-files.js ./out/test/setup-configuration '.js' '._js'",
+    "rename:back": "node ./scripts/rename-files.js ./out/test/setup-configuration '._js' '.js'",
+    "test": "npm run compile && npm run rename:forward && node ./node_modules/vscode/bin/test && npm run rename:back",
+    "rename:test:forward": "node ./scripts/rename-files.js ./out/test/tests '.js' '._js'",
+    "rename:test:back": "node ./scripts/rename-files.js ./out/test/tests '._js' '.js'",
+    "setup:config": "npm run compile && npm run rename:test:forward && node ./node_modules/vscode/bin/test && npm run rename:test:back",
+    "setup:config:insiders": "npm run compile && npm run rename:test:forward && CODE_VERSION='insiders' node ./node_modules/vscode/bin/test && npm run rename:test:back",
     "prelint": "prettier --print-width 140 --single-quote --write 'src/**/*.ts'",
     "lint": "tslint 'src/**/*.ts' --format stylish --fix"
   },
