fix: npm scripts
need fix

--- a/package.json
+++ b/package.json
@@ -39,13 +39,9 @@
     "compile": "npm run clean && tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "rename:forward": "node ./scripts/rename-files.js ./out/test/setup-configuration '.js' '._js'",
-    "rename:back": "node ./scripts/rename-files.js ./out/test/setup-configuration '._js' '.js'",
-    "test": "npm run compile && npm run rename:forward && node ./node_modules/vscode/bin/test && npm run rename:back",
-    "rename:test:forward": "node ./scripts/rename-files.js ./out/test/tests '.js' '._js'",
-    "rename:test:back": "node ./scripts/rename-files.js ./out/test/tests '._js' '.js'",
-    "setup:config": "npm run compile && npm run rename:test:forward && node ./node_modules/vscode/bin/test && npm run rename:test:back",
-    "setup:config:insiders": "npm run compile && npm run rename:test:forward && CODE_VERSION='insiders' node ./node_modules/vscode/bin/test && npm run rename:test:back",
+    "test": "npm run compile && TYPE=1 node ./scripts/remane-files.js && node ./node_modules/vscode/bin/test && TYPE=2 node ./scripts/remane-files.js",
+    "setup:config": "npm run compile && TYPE=3 node ./scripts/remane-files.js && node ./node_modules/vscode/bin/test && TYPE=4 node ./scripts/remane-files.js",
+    "setup:config:insiders": "npm run compile && TYPE=3 node ./scripts/remane-files.js && CODE_VERSION='insiders' node ./node_modules/vscode/bin/test && TYPE=4 node ./scripts/remane-files.js",
     "prelint": "prettier --print-width 140 --single-quote --write 'src/**/*.ts'",
     "lint": "tslint 'src/**/*.ts' --format stylish --fix"
   },
