fix: typo in package.json

--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "views": {
       "jiraExplorer": [
         {
-          "id": "issues",
+          "id": "jiraExplorer",
           "name": "EXPLORER"
         }
       ]
