--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
   "description": "Jira integration for vscode",
-  "version": "0.14.0",
+  "version": "0.14.1",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
@@ -125,6 +125,34 @@
           "type": "boolean",
           "description": "You can manage your Jira unread notifications inside VsCode notification center (n.b: only new Jira versions has notifications)",
           "default": false
+        },
+        "jira-plugin.additionalCertificate": {
+          "type": "object",
+          "title": "Additional certificate settings",
+          "properties": {
+            "ca": {
+              "type": "array",
+              "description": "CA full files path (n.b: necessary only if the server uses a self-signed certificate)",
+              "items": {
+                "type": "string"
+              }
+            },
+            "cert": {
+              "type": "string",
+              "description": "Certificate authority full file path (n.b: necessary only if the server requires client certificate authentication)"
+            },
+            "key": {
+              "type": "string",
+              "description": "Private key full file path (n.b: necessary only if the server requires client certificate authentication)"
+            }
+          },
+          "default": {
+            "ca": [
+              ""
+            ],
+            "cert": "",
+            "key": ""
+          }
         }
       }
     },
