--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
   "description": "Jira integration for vscode",
-  "version": "0.15.1",
+  "version": "0.15.2-beta",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
